--- a/gradle.properties
+++ b/gradle.properties
@@ -50,7 +50,7 @@ mod_name=Biotech
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=0.1.0
+mod_version=0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -58,4 +58,4 @@ mod_group_id=com.nhat.biotech
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=NsTut
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Biologically engineer Minecraft.
+mod_description=The mod that let you biologically engineer Minecraft.
