--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     implementation fg.deobf("curse.maven:iron-chests-228756:4614852")
     implementation fg.deobf("curse.maven:itank-256991:4647928")
     implementation fg.deobf("curse.maven:generatorgalore-691049:4661531")
+    implementation fg.deobf("curse.maven:patchouli-306770:4966125")
 
     // compile against the JEI API but do not include it at runtime
     compileOnly(fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}"))
